# AI-EDA-Assistant

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  main.py  requirements.txt
backend/datasets/: 5c78d508.joblib  749f0c2f.joblib  913aadc7.joblib  9e56c717.joblib  b8cec1f4.joblib  f3b76bb3.joblib
backend/storage/: activity.db
frontend/: .dockerignore  .env.example  Dockerfile  SETUP.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/scripts/: prepare-standalone.mjs  start-standalone.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/[...path]/: route.ts
frontend/src/components/: login-page.tsx  step-navigator.tsx  theme-toggle.tsx
frontend/src/components/tabs/: cleaning-tab.tsx  eda-advanced-modules.tsx  eda-tab.tsx  ml-forecast-tab.tsx  ml-tab.tsx  prediction-tab.tsx  report-tab.tsx  sales-forecast-tab.tsx  time-series-forecast-tab.tsx  understanding-tab.tsx  upload-tab.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  form.tsx  sidebar.tsx
frontend/src/lib/: api.ts  eda.ts  store.ts  theme-context.tsx
infrastructure/nginx/: nginx.conf
infrastructure/pgadmin/: servers.json
