[project]
name = "ai-eda-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "joblib>=1.5.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.24",
    "reportlab>=4.4.10",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.44.0",
]
